# q5

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: wheels.yml
docs/: conf.py  index.rst  q5.rst  quickstart.rst
examples/: rotation_example.py  template.py
examples/q5_basics/: draw_functions.py  draw_image.py  matrix_example.py  polygon_example.py  polyline_example.py
examples/showcase/: oop_example.py
examples/templates/: template_full.py
q5/: __init__.py  app.py  draw.py
q5_numpy/: Cargo.toml
q5_numpy/src/: lib.rs
src/: constant.rs  core.rs  event.rs  lib.rs  math_utils.rs  numpy_lib.rs  system.rs  utils.rs
tests/: test_math_utils.py
