[package]
name = "q5"
version = "0.0.2"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "q5"
crate-type = ["cdylib"]

[dependencies]
nannou = "0.18.1"
pyo3 = { version = "0.16", features = ["extension-module"] }
numpy = "0.16"
ndarray = "0.15.0"
