[package]
name = "q5"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "q5"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
nannou = "0.18.1"
pyo3 = { version = "0.16", features = ["extension-module"] }
