[package]
name = "q5_numpy"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "q5_numpy"
crate-type = ["cdylib"]

[dependencies]
q5 = { path = "..", version="0.1.0" }
nannou = "0.18.1"
pyo3 = { version = "0.16", features = ["extension-module"] }
numpy = "0.16"
ndarray = "0.15.0"
